<resources>
    <string name="app_name_free" translatable="false">RevolFREE</string>
    <string name="app_name_pro" translatable="false">Revolver</string>

    <string name="action">Action</string>
    <string name="activity">Activity</string>
    <string name="activity_note">Open action as activity</string>
    <string name="add_action">Add action</string>
    <string name="add_link">Add link</string>
    <string name="autorun">Autorun</string>
    <string name="autorun_note">Autorun this link at startup</string>
    <string name="back_again">Press again to exit</string>
    <string name="bookmark">Bookmark</string>
    <string name="bookmark_note">Bookmark note</string>
    <string name="button_remove">Button remove</string>
    <string name="button_remove_note">Show button remove</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_delete">Confirm delete?</string>
    <string name="confirm_modify">Confirm modify?</string>
    <string name="connection">Connection</string>
    <string name="connection_note">Check network connection</string>
    <string name="database" translatable="false">Database</string>.
    <string name="default_choice">Default choice selected in the settings</string>
    <string name="default_database_note">This database is used as default</string>
    <string name="default_icon">Default icon</string>
    <string name="default_link_note">This link is used as default</string>
    <string name="delete">Delete</string>
    <string name="delete_link">Delete link</string>
    <string name="description">Description</string>
    <string name="download">Download</string>
    <string name="grid">Grid</string>
    <string name="grid_note">List actions in grid layout</string>
    <string name="home" translatable="false">Home</string>
    <string name="icon">Icon</string>
    <string name="id" translatable="false">Id</string>
    <string name="informations">Informations</string>
    <string name="link">Link</string>
    <string name="links">Links</string>
    <string name="bottombar">Linkbar</string>
    <string name="bottombar_note">Show linkbar</string>
    <string name="floating">Links button</string>
    <string name="floating_note">Show links button</string>
    <string name="modify_link">Modify link</string>
    <string name="note">Note</string>
    <string name="over_quota">Free version has reach the maximum links number!</string>
    <string name="refresh">Refresh</string>
    <string name="remove">Remove</string>
    <string name="remove_link">Remove link</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="subblock">Block</string>
    <string name="subblock_note">Block exit from action</string>
    <string name="subswipe">Swipe</string>
    <string name="subswipe_note">Enable swipe refresh</string>
    <string name="subzoom">Zoom</string>
    <string name="subzoom_note">Enable built-in zoom control</string>
    <string name="swipe">Swipe</string>
    <string name="swipe_note">Enable swipe refresh</string>
    <string name="title">Title</string>
    <string name="toolbar">Toolbar</string>
    <string name="toolbar_note">Show toolbar</string>
    <string name="url" translatable="false">Url</string>
    <string name="yes">Yes</string>
    <string name="wizard">Wizard</string>
    <string name="wizard_note">Use a wizard to add new links</string>

    <string name="nav_header_subtitle" translatable="false" traslatable="false">Innovative bridge by Infodati S.p.A.</string>
    <string name="nav_header_title_free" translatable="false">RevolFREE</string>
    <string name="nav_header_title_pro" translatable="false">Revolver</string>

    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>

    <string name="subtitle_actions">ACTIONS</string>
    <string name="subtitle_home" translatable="false">HOME</string>
    <string name="subtitle_links">LINKS</string>
    <string name="substitle_storage">STORAGE</string>

    <!--    All languages-->
    <string name="ALL_demo_link_1" translatable="false">https://demoinfinity4.edigest.it/revolver/jsp/index.jsp</string>
    <string name="ALL_demo_link_2" translatable="false">https://demoinfinity4.edigest.it/revolver/jsp/index.jsp?userLogin=visitatori&amp;userPassword=visitatori</string>
    <string name="ALL_demo_link_3" translatable="false">https://demoinfinity4.edigest.it/revolver/jsp/index.jsp?userLogin=timbratore&amp;userPassword=timbratore</string>
    <string name="ALL_demo_link_4" translatable="false">https://demoinfinity4.edigest.it/revolver/jsp/index.jsp?userLogin=antonio.ghiotto&amp;userPassword=antoniog11</string>

    <!--    English-->
    <string name="ENG_all" translatable="false">All</string>
    <string name="ENG_demo_link_1_desc" translatable="false">Login</string>
    <string name="ENG_demo_link_2_desc" translatable="false">Visitor log</string>
    <string name="ENG_demo_link_3_desc" translatable="false">Time registration</string>
    <string name="ENG_demo_link_4_desc" translatable="false">User</string>

    <!--    Italian-->
    <string name="ITA_all" translatable="false">Tutti/e</string>
    <string name="ITA_demo_link_1_desc" translatable="false">Autenticazione</string>
    <string name="ITA_demo_link_2_desc" translatable="false">Visitatori</string>
    <string name="ITA_demo_link_3_desc" translatable="false">Rilevazione presenze</string>
    <string name="ITA_demo_link_4_desc" translatable="false">Utente</string>
</resources>