<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_add"
        android:title="@string/add_link"
        android:icon="@drawable/ic_outline_add_24"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_outline_settings_24"
        android:title="@string/settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_outline_refresh_24"
        android:title="@string/refresh"
        app:showAsAction="never"/>
<!--
    <item
        android:id="@+id/menu_links"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/links"
        app:showAsAction="never"/>
-->
</menu>