<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="1dp"
    android:id="@+id/card"
    card_view:cardCornerRadius="10dp"
    card_view:cardElevation="0dp"
    card_view:contentPadding="1dp"
    android:clickable="true">

    <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/id"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0"
            android:singleLine="true"
            android:text="@string/id"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:paddingBottom="5dp"
            android:layout_gravity="center"
            android:contentDescription="@string/icon"
            android:src="@android:drawable/ic_menu_myplaces" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ellipsize="marquee"
            android:gravity="center"
            android:textStyle="normal"
            android:textSize="14dp"
            android:singleLine="false"
            android:minLines="2"
            android:maxLines="2"
            android:text="@string/title"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/marker"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:contentDescription="@string/icon"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>