<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:tag="Link"
    tools:context=".LinkActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5sp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textview_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_gravity="left|top"
            android:textSize="12dp"
            android:textColor="@color/subTextColor"
            android:text="@string/url"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edittext_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_gravity="left|top"
            android:textSize="14dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textview_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_gravity="left|top"
            android:textSize="12dp"
            android:textColor="@color/subTextColor"
            android:text="@string/description"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edittext_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_gravity="left|top"
            android:textSize="14dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textview_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:singleLine="true"
            android:layout_gravity="left|top"
            android:textSize="12dp"
            android:textColor="@color/subTextColor"
            android:text="@string/note"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edittext_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            android:lines="4"
            android:maxLines="4"
            android:gravity="top|left"
            android:inputType="textMultiLine"
            android:textSize="14dp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_delete"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textSize="14dp"
                android:text="@string/delete"
                android:drawableLeft="@android:drawable/ic_menu_delete"
                android:onClick="onDeleteBtnClick"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textSize="14dp"
                android:text="@string/save"
                android:drawableLeft="@android:drawable/ic_menu_save"
                android:onClick="onSaveBtnClick"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>